public interface ItemResource {
    public String providePicture();
    public String provideTitle();
    public String provideDescription();
    public String providePrice();
}
