@startuml
skinparam classAttributeIconSize 0

Advertisment <|-- PictureAd
Advertisment <|-- TextAd
Advertisment <|-- ThumbnailAd
Advertisment o- ItemResource
ItemResource <|... CarResource
ItemResource <|... FurnitureResource
ItemResource <|... TicketResource
CarResource o-- Car
FurnitureResource o-- Furniture
TicketResource o-- Ticket

abstract class Advertisment{
    - ItemResource item
    + display(): void
}

class PictureAd{
    + display(): String
}

class TextAd{
    + display(): String
}

class ThumbnailAd{
    + display(): String
}

interface ItemResource {
    + providePicture(): String
    + provideTitle(): String
    + provideDescription(): String
    + providePrice(): String
}

class CarResource{
    - Car car
}

class FurnitureResource{
    -Furniture furniture
}

class TicketResource{
    -Ticket ticket
}

class Car{
    - String picUrl
    - String[] features
    - int price
}

class Furniture{
    - String picUrl
    - String description
    - float price
}

class Ticket{
    - String picUrl
    - String name
    - String number
    - String location
    - String price
}

@enduml